refator:changes test methods